tests/rosetta/out/Smalltalk/anti-primes.out
/workspace/mochi/tests/rosetta/out/Smalltalk/anti-primes.st:17: parse error, expected '|' or identifier
